--- a/dashboard_final.html
+++ b/dashboard_final.html
@@ -324,7 +324,7 @@
             }
         }
     },
-    series: ([{
+    series: [{
         name: 'Brands',
         colorByPoint: true,
         data: [{
